--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Assorted Trails
+title: Rahul Jha
 email: rahulkumar.jha@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  I am Rahul Jha, an applied scientist working at Microsoft. My expertise is in natural language processing and machine learning.
+  I am an applied scientist working at Microsoft. My expertise is in natural language processing and machine learning.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: rahuljha
