--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Rahul Jha
-email: rahulkumar.jha@gmail.com
+email: rahuljh.ml@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   I am an applied scientist working at Microsoft. My expertise is in natural language processing and machine learning.
 baseurl: "" # the subpath of your site, e.g. /blog
