--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ github_username:  rahuljha
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-cayman
+theme: jekyll-theme-slate
 plugins:
   - jekyll-feed
 
