--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ github_username:  rahuljha
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-slate
+theme: bulma-clean-theme
 plugins:
   - jekyll-feed
 
