--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ github_username:  rahuljha
 
 # Build settings
 markdown: kramdown
-remote_theme: chrisrhymes/bulma-clean-theme
+theme: minima
 plugins:
   - jekyll-feed
 
