--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ twitter_username: rahuljha
 github_username:  rahuljha
 
 # Build settings
-markdown: GFM
+markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
